@@ -377,6 +377,7 @@ namespace MeGUI.core.gui
             try
             {
                 currentProcessor.stop();
+                HideProcessWindow();
             }
             catch (JobRunException er)
             {
